--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "wouter": "^2.8.0-alpha.2"
+    "wouter": "^2.8.0-alpha.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
