--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "wouter": "^2.8.0-alpha.2",
     "yup": "^0.32.11"
   },
   "scripts": {
