--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +36,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "node_modules/eslint/bin/eslint.js"
     ]
   },
   "browserslist": {
