--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@mui/material": "^5.8.7",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@nextui-org/react": "^1.0.0-beta.9",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "date-fns": "^2.29.1",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
@@ -20,6 +23,7 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -33,7 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server-auth --watch ./src/data/db.json --port 3001"
+    "server": "json-server-auth --watch ./src/data/db.json --delay 1500 --port 3001"
   },
   "eslintConfig": {
     "extends": [
