--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "node_modules/eslint/bin/eslint.js"
+      "react-app/jest"
     ]
   },
   "browserslist": {
